objects/getCustomerNotes__x.object
<CustomObject>
    <description>getCustomerNotes</description>
    <externalDataSource>HRC_Collection_Notes</externalDataSource>
    <externalName>getCustomerNotes</externalName>
    <fields>
        <fullName>HRCNotePKID__c</fullName>
        <label>HRCNotePKID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSDNumber__c</fullName>
        <description>SSDNumber</description>
        <externalDeveloperName>SSDNumber</externalDeveloperName>
        <label>SSDNumber</label>
        <length>128</length>
        <referenceTargetField>Source_System_Detail__c.SAP_Account_Number_and_Sales_Org__c</referenceTargetField>
        <referenceTo>Source_System_Detail__c</referenceTo>
        <relationshipLabel>Collection Notes</relationshipLabel>
        <relationshipName>getCustomerNotes</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>accountNumber__c</fullName>
        <description>accountNumber</description>
        <externalDeveloperName>accountNumber</externalDeveloperName>
        <label>accountNumber</label>
        <length>128</length>
        <referenceTargetField>Account.SAP_Account_Number_and_Sales_Org__c</referenceTargetField>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collection Notes</relationshipLabel>
        <relationshipName>getCustomerNotes</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>companyCode__c</fullName>
        <description>companyCode</description>
        <externalDeveloperName>companyCode</externalDeveloperName>
        <label>companyCode</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdBy__c</fullName>
        <description>createdBy</description>
        <externalDeveloperName>createdBy</externalDeveloperName>
        <label>createdBy</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdTime__c</fullName>
        <description>createdTime</description>
        <externalDeveloperName>createdTime</externalDeveloperName>
        <label>createdTime</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dataFeedTime__c</fullName>
        <description>dataFeedTime</description>
        <externalDeveloperName>dataFeedTime</externalDeveloperName>
        <label>dataFeedTime</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>emailAddress__c</fullName>
        <description>emailAddress</description>
        <externalDeveloperName>emailAddress</externalDeveloperName>
        <label>emailAddress</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>noteType__c</fullName>
        <description>noteType</description>
        <externalDeveloperName>noteType</externalDeveloperName>
        <label>noteType</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>notes__c</fullName>
        <description>notes</description>
        <externalDeveloperName>notes</externalDeveloperName>
        <label>notes</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subject__c</fullName>
        <description>subject</description>
        <externalDeveloperName>subject</externalDeveloperName>
        <label>subject</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>getCustomerNotes</label>
    <pluralLabel>getCustomerNotes</pluralLabel>
</CustomObject>